--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Practicando con GIT</title>
+    <title>Practicando con GIT desde VScode</title>
 </head>
 <body>
     <h1>GIT DESDE CERO</h1>
     <P>EDteam</P>
+    <section>
+        <p>Estoy en la rama TEST</p>
+    </section>
+    <div>
+        <p>
+        Practicando desde VScode    
+        </p>
+    </div>
 </body>
 </html>
